--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -1,6 +1,5 @@
 .navbar-transparent {
   background: transparent;
-  height: 5vh;
 }
 
 .navbar-collapse.collapse.show {
